--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
+    "@cfaester/enzyme-adapter-react-18": "^0.7.0",
     "@jest/types": "^29.5.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/enzyme": "^3.10.13",
     "@types/jest": "^29.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -27,12 +32,14 @@
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
     "babel-jest": "^29.5.0",
+    "enzyme": "^3.11.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "jest-enzyme": "^7.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
